# Soorya

./: CMakeLists.txt  README.md  install_autostart.sh  lumonmdr.service  settingsRPI.json  toolchain-rpi.cmake
libs/: CMakeLists.txt
libs/Image/: CMakeLists.txt  Image.h  ImageDisplay.cpp  ImageDisplay.h
libs/Numbers/: CMakeLists.txt  Number.h  NumberGrid.cpp  NumberGrid.h
src/: main.cpp
src/UI/: UIManager.cpp  UIManager.h
src/UI/Widgets/: IdleScreen.cpp  IdleScreen.h  NumbersPanel.cpp  NumbersPanel.h  Settings.h
